# k4SimGeant4

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml  docs.yml  key4hep-build.yaml  test.yaml  test_spack.yml
Detector/: CMakeLists.txt
Detector/DetComponents/: CMakeLists.txt
Detector/DetComponents/src/: GeoConstruction.cpp  GeoConstruction.h  GeoSvc.cpp  GeoSvc.h  MagFieldProbe.cpp  MagFieldProbe.h  MagFieldScanner.cpp  MagFieldScanner.h  MaterialScan.cpp  MaterialScan.h  MaterialScan_2D.cpp  MaterialScan_2D.h  MaterialScan_2D_genericAngle.cpp  MaterialScan_2D_genericAngle.h  MaterialScan_genericAngle.cpp  MaterialScan_genericAngle.h  MergeCells.cpp  MergeCells.h  MergeLayers.cpp  MergeLayers.h  RedoSegmentation.cpp  RedoSegmentation.h  RewriteBitfield.cpp  RewriteBitfield.h
Detector/DetComponents/tests/options/: magFieldScanner.py
Detector/DetStudies/: CMakeLists.txt
Detector/DetStudies/scripts/: cec_derive1  cec_derive2  cec_hists  cec_process_events  cec_test  cec_test_summary
Detector/DetStudies/src/components/: EnergyInCaloLayers.cpp  EnergyInCaloLayers.h  SamplingFractionInLayers.cpp  SamplingFractionInLayers.h  UpstreamMaterial.cpp  UpstreamMaterial.h
Detector/DetStudies/tests/options/: deadMaterial_inclinedEcal.py  fcc_ee_deadMaterial_inclinedEcal.py
SimG4Common/: CMakeLists.txt
SimG4Common/include/SimG4Common/: DD4hepField.h  Geant4CaloHit.h  Geant4PreDigiTrackHit.h  MapField.h  MapField2DRegular.h  MapField3DRegular.h  ParticleInformation.h  Units.h
SimG4Common/src/: DD4hepField.cpp  EventInformation.cpp  Geant4CaloHit.cpp  Geant4PreDigiTrackHit.cpp  MapField.cpp  MapField2DRegular.cpp  MapField3DRegular.cpp  ParticleInformation.cpp
SimG4Components/: CMakeLists.txt
SimG4Components/src/: InspectHitsCollectionsTool.cpp  InspectHitsCollectionsTool.h  SimG4Alg.cpp  SimG4Alg.h  SimG4ConstantMagneticFieldTool.cpp  SimG4ConstantMagneticFieldTool.h  SimG4CrossingAngleBoost.cpp  SimG4CrossingAngleBoost.h  SimG4DD4hepDetector.cpp  SimG4DD4hepDetector.h  SimG4FtfpBert.cpp  SimG4FtfpBert.h  SimG4GeantinoDeposits.h  SimG4GeantinosFromEdmTool.cpp  SimG4GeantinosFromEdmTool.h  SimG4MagneticFieldFromMapTool.cpp  SimG4MagneticFieldFromMapTool.h  SimG4MagneticFieldTool.cpp  SimG4MagneticFieldTool.h  SimG4OpticalPhysicsList.cpp  SimG4OpticalPhysicsList.h  SimG4PrimariesFromEdmTool.cpp  SimG4PrimariesFromEdmTool.h  SimG4SaveCalHits.cpp  SimG4SaveCalHits.h  SimG4SaveParticleHistory.cpp  SimG4SaveParticleHistory.h  SimG4SaveSmearedParticles.cpp  SimG4SaveSmearedParticles.h  SimG4SaveTrackerHits.cpp  SimG4SaveTrackerHits.h  SimG4SaveTrajectory.cpp  SimG4SaveTrajectory.h  SimG4SingleParticleGeneratorTool.cpp  SimG4SingleParticleGeneratorTool.h  SimG4SmearGenParticles.cpp  SimG4SmearGenParticles.h  SimG4Svc.cpp  SimG4Svc.h
SimG4Components/tests/options/: magFieldFromMap.py  magFieldTool.py  optical_physics_test.py  xAngleBoost.py
SimG4Fast/: CMakeLists.txt
SimG4Fast/src/components/: SimG4FastSimCalorimeterRegion.cpp  SimG4FastSimCalorimeterRegion.h  SimG4FastSimHistograms.cpp  SimG4FastSimHistograms.h  SimG4FastSimPhysicsList.cpp  SimG4FastSimTrackerRegion.cpp  SimG4FastSimTrackerRegion.h  SimG4GflashHomoCalo.cpp  SimG4GflashHomoCalo.h  SimG4GflashSamplingCalo.cpp  SimG4GflashSamplingCalo.h  SimG4ParticleSmearFormula.cpp  SimG4ParticleSmearFormula.h  SimG4ParticleSmearRootFile.cpp  SimG4ParticleSmearRootFile.h  SimG4ParticleSmearSimple.cpp  SimG4ParticleSmearSimple.h
SimG4Fast/src/lib/: FastSimModelTracker.cpp
SimG4Full/: CMakeLists.txt
SimG4Full/src/components/: SimG4FullSimDCHRegion.cpp  SimG4FullSimDCHRegion.h  SimG4UserLimitPhysicsList.cpp  SimG4UserLimitRegion.cpp  SimG4UserLimitRegion.h
SimG4Interface/: CMakeLists.txt
SimG4Interface/include/SimG4Interface/: ISimG4MagneticFieldTool.h
cmake/: k4SimGeant4Config.cmake  k4SimGeant4Doxygen.cmake
doc/: Doxyfile.in  FullSimulation.md
